--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="navbar-header">
                                 <div class="mobile-logo">
                                     <a href="index.html">
-                                        <img src="assets/images/aex.png" alt="Logo" title="Logo" />
+                                        <img src="https://drive.google.com/file/d/1Mk9jY8f9E--dCnHyugnoSfRqI38xZVKL/view?usp=drive_link" alt="Logo" title="Logo" />
                                     </a>
                                 </div>
                                 <!-- Toggle Button -->
@@ -251,5 +251,6 @@
     <!-- SCRIPT JS-->
     <script src="assets/js/script.js"></script>
 </body>
+
 
 </html>
